Update to 1.20.3 (WIP: missing updated cloth dependency)